Fix img rule in card.css to not overlap on intended elements

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -18,7 +18,7 @@
   border-radius: 5px;
 }
 
-img {
+.card img {
   width: 100%;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
